Fix spacing issues on post links
Previous and next post links would overflow when the view was small enough,
resolve this issue by flexing

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -175,7 +175,9 @@ footer {
     background: rgba(89, 148, 129, 0.3);
 }
 .PageNavigation {
-    margin-bottom: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 .posts .list-group-item-heading {
     margin-right: 80px;
